--- a/templates/k8s-web.yml.j2
+++ b/templates/k8s-web.yml.j2
@@ -43,7 +43,7 @@ metadata:
   namespace: {{ challenge_namespace }}
 spec:
   hosts:
-  - "{{ deployment_name }}.{{ tcp_domain_name }}"
+  - "{{ deployment_name }}.{{ https_domain_name }}"
   gateways:
   - {{ istio_namespace }}/k8s-https-challenge-gateway
   http:
