--- a/templates/k8s-web-gateway.yml.j2
+++ b/templates/k8s-web-gateway.yml.j2
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ istio_namespace }}
 spec:
   selector:
-    istio: {{ ingress_gateway_name }}
+    istio: {{ istio_ingress_name }}
   servers:
   - port:
       number: {{ external_https_port }}
