--- a/templates/build.yml.j2
+++ b/templates/build.yml.j2
@@ -1,7 +1,7 @@
-apiVersion: v1
+apiVersion: batch/v1
 kind: Job
 metadata:
-  name: builder-{{ container_name }}
+  name: builder-{{ challenge_name }}
   namespace: {{ registry_namespace }}
 spec:
   ttlSecondsAfterFinished: 100
@@ -12,6 +12,6 @@ spec:
         image: gcr.io/kaniko-project/executor:latest
         args:
         - "--context=git://{{ challenge_repo }}"
-        - "--destination=challenge-registry-service.{{ registry_namespace }}./{{ challenge_name }}:latest"
+        - "--destination=challenge-registry-service.{{ registry_namespace }}/{{ challenge_name }}:latest"
         - "--insecure"
       restartPolicy: Never
