Got k8s objects deploying dynamically; need to fix registry being inaccessible

--- a/templates/k8s-tcp.yml.j2
+++ b/templates/k8s-tcp.yml.j2
@@ -18,7 +18,7 @@ spec:
         image: {{ container_name }}
         imagePullPolicy: Always
         ports:
-        - name: {{ deployment_name }}-{{ challenge_port }}
+        - name: chal-port
           containerPort: {{ challenge_port }}
           protocol: TCP
 ---
@@ -31,7 +31,7 @@ spec:
   selector:
     app: {{ deployment_name }}
   ports:
-    - name: {{ deployment_name }}-{{ challenge_port }}
+    - name: chal-port
       protocol: TCP
       port: {{ challenge_port }}
       targetPort: {{ challenge_port }}
