--- a/templates/build.yml.j2
+++ b/templates/build.yml.j2
@@ -6,33 +6,36 @@ metadata:
 spec:
   ttlSecondsAfterFinished: 100
   template:
+    metadata:
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: kaniko
         image: gcr.io/kaniko-project/executor:latest
         args:
         - "--context=git://{{ challenge_repo }}"
-        - "--destination=chal-registry.{{ https_domain_name }}:4430/{{ challenge_name }}:latest"
+        - "--destination=challenge-registry-service.{{ registry_namespace }}/{{ challenge_name }}:latest"
+        - "--insecure"
         env:
         - name: GIT_TOKEN
           value: {{ git_credential }}
         volumeMounts:
-        - name: registry-auth
-          mountPath: "/kaniko/.docker/"
-          readOnly: true
+        - name: kaniko-secret
+          mountPath: /kaniko/.docker
       volumes:
-      - name: registry-auth
-        configMap:
-          name: registry-auth-map
-          items:
-          - key: "config.json"
-            path: "config.json"
+        - name: kaniko-secret
+          secret:
+            secretName: registry-auth-map
+            items:
+              - key: .dockerconfigjson
+                path: config.json
       restartPolicy: Never
 ---
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: registry-auth-map
   namespace: {{ registry_namespace }}
 data:
-  config.json: "\n{\n\"auths\": {\n		\"https://chal-registry.{{ https_domain_name }}:4430/v1/\": {\n			\"auth\": \"{{ registry_auth_token }}\"\n		}\n	}\n}"
+  .dockerconfigjson: {{ registry_data }}
