--- a/templates/k8s-tcp.yml.j2
+++ b/templates/k8s-tcp.yml.j2
@@ -21,6 +21,17 @@ spec:
         - name: chal-port
           containerPort: {{ challenge_port }}
           protocol: TCP
+      imagePullSecrets:
+        - name: {{ deployment_name }}-pull
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ deployment_name }}-pull
+  namespace: {{ challenge_namespace }}
+data:
+  .dockerconfigjson: {{ registry_data }}
+type: kubernetes.io/dockerconfigjson
 ---
 apiVersion: v1
 kind: Service
