--- a/templates/k8s-web.yml.j2
+++ b/templates/k8s-web.yml.j2
@@ -18,9 +18,20 @@ spec:
         image: {{ container_name }}
         imagePullPolicy: Always
         ports:
-        - name: {{ deployment_name }}-{{ challenge_port }}
+        - name: chal-port
           containerPort: {{ challenge_port }}
           protocol: TCP
+      imagePullSecrets:
+        - name: {{ deployment_name }}-pull
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ deployment_name }}-pull
+  namespace: {{ challenge_namespace }}
+data:
+  .dockerconfigjson: {{ registry_data }}
+type: kubernetes.io/dockerconfigjson
 ---
 apiVersion: v1
 kind: Service
@@ -31,7 +42,7 @@ spec:
   selector:
     app: {{ deployment_name }}
   ports:
-    - name: {{ deployment_name }}-{{ challenge_port }}
+    - name: chal-port
       protocol: TCP
       port: {{ challenge_port }}
       targetPort: {{ challenge_port }}
