--- a/templates/k8s-random-port.yml.j2
+++ b/templates/k8s-random-port.yml.j2
@@ -41,10 +41,54 @@ metadata:
 spec:
   selector:
     app: {{ deployment_name }}
-  type: NodePort
   ports:
     - name: chal-port
       protocol: TCP
       port: {{ challenge_port }}
       targetPort: {{ challenge_port }}
-      nodePort: {{ random_port }}
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: {{ deployment_name }}-tcp-{{ random_port }}-gateway
+  namespace: {{ istio_namespace }}
+spec:
+  selector:
+    istio: {{ istio_ingress_name }}
+  servers:
+  - port:
+      number: {{ random_port }}
+      protocol: TCP
+      name: tcp
+    hosts:
+    - '*'
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: {{ deployment_name }}-vs
+  namespace: {{ challenge_namespace }}
+spec:
+  hosts:
+  - "*"
+  gateways:
+  - {{ istio_namespace }}/{{ deployment_name }}-tcp-{{ random_port }}-gateway
+  tcp:
+  - match:
+    - port: {{ random_port }}
+    route:
+    - destination:
+        host: {{ deployment_name }}-service
+        port:
+          number: {{ challenge_port }}
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: DestinationRule
+metadata:
+  name: {{ deployment_name }}
+  namespace: {{ challenge_namespace }}
+spec:
+  host: {{ deployment_name }}-service
+  trafficPolicy:
+    tls:
+      mode: DISABLE
