--- a/templates/registry.yml.j2
+++ b/templates/registry.yml.j2
@@ -47,7 +47,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: registry-pvc
-  namespace: registry
+  namespace: {{ registry_namespace }}
 spec:
   accessModes:
     - ReadWriteMany
